--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-requests
-stix
-tabulate
-passivetotal
+cybox==2.1.0.12
+ez-setup==0.9
+lxml==3.5.0
+passivetotal==1.0.2
+python-dateutil==2.4.2
+requests==2.9.1
+six==1.10.0
+stix==1.2.0.0
+tabulate==0.7.5
