--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ cybox==2.1.0.12
 dicttoxml
 ez-setup==0.9
 lxml==3.5.0
-passivetotal==1.0.2
+passivetotal
 python-dateutil==2.4.2
 requests==2.9.1
 six==1.10.0
