--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -6,6 +6,6 @@ sphinx:
 
 python:
    version: 3.7
-   setup_py_install: true
    install:
+     - requirements: requirements.txt
      - requirements: docs/requirements.txt
